# liverCancerSegmentator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py
clinical_ai_copilot/: .env.example  README.md  RESUME.md  __init__.py  agents.py  config.py  graph.py  llm.py  render_static_graph.py  run_demo.py  sample_case.json  state.py  tools.py  visualize_graph.py
clinical_ai_copilot/v1/api/: main.py
clinical_ai_copilot/v1/api/routers/: cases.py  health.py  reports.py  workflow.py
clinical_ai_copilot/v1/api/schemas/: case.py
clinical_ai_copilot/v1/api/services/: copilot.py
clinical_ai_copilot_output/: langgraph.mmd  report.md
failureDetection/: README.md  __init__.py  confidence_cli.py  example_config.yaml  failure_detection.py  fd.ipynb  fd_clean.ipynb  metrics.py  plots.py
inference/: Dockerfile  inference_service.py  requirements.txt
liver_cancer_segmentator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nnUNetTrainer__nnUNetResEncUNetLPlans__3d_fullres/: dataset.json  plans.json
output_mask/: plans.pkl
scripts/: create_demo.py  download_model.py
src/: inference.py  model_loader.py
